--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -223,6 +223,11 @@ nav {
     font-size: 4vw;
     padding: 2vw 4vw;
     font-weight: 800;
+    background-color: rgb(49, 91, 107);
+    color: #eee;
+    width: 40vw;
+    margin: 2vw;
+    border-radius: 15px;
 }
 
 .listaCartaz {
