--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -164,18 +164,42 @@ nav {
 
 /* Banner */
 
+.area-banner:hover .banner .banner-text {
+    display: block;
+}
+
 .banner {
+    display: flex;
+    align-items: end;
+    width: 100%;
+    height: 41vw;
+}
+
+.none {
+    display: none;
+}
+
+.banner-1 {
     background-image: url('./img/banner.jpg');
     background-size:cover;
     background-position: top;
-    width: 100%;
-    height: 40vw;
-    display: flex;
-    align-items: end;
 }
 
-.banner:hover .banner-text {
-    display: block;
+.banner-2 {
+    background-image: url('./img/banner2.jpg');
+    background-size:cover;
+    background-position: top;
+}
+
+.banner-3 {
+    background-image: url('./img/banner3.jpg');
+    background-size:cover;
+    background-position: top;
+}
+.banner-4 {
+    background-image: url('./img/banner4.jpg');
+    background-size:cover;
+    background-position: top;
 }
   
 .banner-text {
@@ -214,7 +238,51 @@ nav {
     opacity: 1;
 }
 
+.selections {
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 20vw;
+    height: 3vw;
+}
 
+.select-banner {
+    width: 2vw;
+    height: 1vw;
+    background-color: #eff;
+    border-radius: 15px;
+}
+
+.active {
+    background-color: #555;
+}
+
+.controls {
+    position: absolute;
+    top: 76px;
+    height: 42vw;
+    width: 95%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 2vw;
+}
+
+.controls img {
+    height: 10vw;
+    width: 10vw;
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+.controls img:hover {
+    opacity: 1;
+}
+
+.proximo {
+    transform: rotate(180deg);
+}
 
 
 /* CINEMA */
