--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -32,6 +32,10 @@ header {
     max-width: 1200px;
 }
 
+.linha {
+    margin-top: 2vw;
+}
+
 .menu-burguer {
     width: 30px;
     height: 30px;
@@ -369,7 +373,7 @@ nav {
 }
 
 .filme-5:after {
-    content: 'L';
+    content: '18';
     position: relative;
     margin-left: 25px;
     padding: 10px;
@@ -414,12 +418,6 @@ nav {
     background-color: #555;
 }
 
-
-
-.emBreve {
-    margin-top: 70px;
-}
-
 .emBreve-title {
     font-size: 4vw;
     padding: 2vw 4vw;
@@ -443,6 +441,45 @@ nav {
     margin-top: 50px;
 }
 
+.imagem-grid {
+    width: 100px;
+}
+
+.hora {
+    border-radius: 15px;
+    background-color: #999;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    justify-content: space-around;
+    min-height: 300px;
+    max-width: 400px;
+}
+
+.aluguel {
+    background-color: #aaa;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    justify-content: space-around;
+    min-height: 300px;
+    max-width: 400px;
+}
+
+.reserva {
+    background-color: #bbb;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    justify-content: space-around;
+    min-height: 300px;
+    max-width: 400px;
+}
 
 @media screen and (max-width:1050px) {
     .filme-3{
@@ -459,6 +496,21 @@ nav {
         border-radius: 4px 0 0 4px;
         margin-right: 0;
     }
+
+    .features {
+        display: grid;
+        grid-template-columns: repeat(2, 2fr);
+        grid-gap: 20px;
+        text-align: center;
+        margin-top: 50px;
+    }
+
+    .reserva {
+        grid-column: span 2;
+        justify-self: center;
+        min-height: 300px;
+        min-width: 400px;
+    }
 }
 
 @media screen and (max-width:710px) {
@@ -472,7 +524,7 @@ nav {
 
     .bot {
         position: absolute;
-        height: 70%;
+        height: 325px;
     }
 }
 
@@ -484,6 +536,14 @@ nav {
         border: transparent;
         border-radius: 4px 0 0 4px;
         margin-right: 0;
+    }
+
+    .features {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 20px;
+        text-align: center;
+        margin-top: 50px;
     }
 }
 
