--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -122,6 +122,7 @@ header {
 .dropdown-content a {
     text-decoration: none;
     font-weight: 400;
+    color: #555;
 }
   
 .dropdown:hover .dropdown-content {
@@ -660,7 +661,7 @@ footer {
 }
 
 footer h2 {
-    font-size: 4vw;
+    font-size: 2vw;
 }
 
 @media screen and (max-width:1024px) {
@@ -670,7 +671,40 @@ footer h2 {
     }
 }
 
-@media screen and (max-width:800px) and (min-width:560px) {
+@media screen and (min-width:1600px){
+    .app-img img {
+        width: 690px;
+    }
+
+    .img-galeria img {
+        width: 280px;
+        height: 175px;
+    }
+
+    .emCartaz-title {
+        font-size: 2vw;
+        padding: 1vw 2vw;
+        font-weight: 800;
+        background-color: rgb(49, 91, 107);
+        color: #eee;
+        width: 20vw;
+        margin: 2vw;
+        border-radius: 15px;
+    }
+
+    .emBreve-title {
+        font-size: 2vw;
+        padding: 1vw 2vw;
+        font-weight: 800;
+        background-color: rgb(48, 83, 147);
+        color: #eee;
+        width: 25vw;
+        margin: 2vw;
+        border-radius: 15px;
+    }
+}
+
+@media screen and (max-width:800px) and (min-width:561px) {
     .search input {
         width: 85%;
         height: 30px;
@@ -737,7 +771,7 @@ footer h2 {
     }
 }
 
-@media screen and (max-width:559px) {
+@media screen and (max-width:560px) {
     .search input {
         width: 75%;
         height: 30px;
@@ -758,6 +792,14 @@ footer h2 {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 0.5vw;
+    }
+
+    .gale {
+        display:none;
+    }
+
+    .b-none {
+        display: block;
     }
 
     .avalia-grid {
@@ -790,7 +832,13 @@ footer h2 {
 
     footer h2 {
         font-size: 7vw;
-    } 
+    }
+
+    .features div {
+        margin: auto;
+        max-width: 380px;
+        width: 80vw;
+    }
 }
 
 @media screen and (max-width:520px) {
@@ -928,7 +976,75 @@ footer h2 {
     }
 
     .app-logo img {
-        width: 150px;
-        height: 45px;
+        width: 130px;
+        height: 40px;
     }
+    .app-logo {
+        margin: 20px auto;
+    }
+}
+
+
+
+
+/* Login */
+
+.area-form {
+    max-width: 500px;
+    width: 80vw;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    background-color: #ddd;
+    margin-top: 45px;
+    margin-bottom: 45px;
+    border-radius: 20px;
+}
+
+.form-title {
+    text-align: center;
+    margin-top: 45px;
+}
+
+.area-form button {
+    margin: 45px auto;
+    width: 33%;
+    background-color: #0f0;
+    opacity: 0.6;
+    border-radius: 5px;
+    border: transparent;
+    padding: 10px;
+}
+
+.area-form button:hover {
+    margin: 45px auto;
+    width: 33%;
+    background-color: #0f0;
+    opacity: 1;
+}
+
+.area-form input {
+    width: 100%;
+    height: 30px;
+    padding: 0px 5px;
+    border: transparent;
+    border-radius: 4px 0 0 4px;
+    margin-right: 0;
+}
+
+.area-form input:focus {
+    outline: none;
+}
+
+.area-form .input-group {
+    padding: 5% 5% 0 5%;
+}
+
+.area-form label {
+    color: #777;
+    font-weight: bold;
+}
+
+.ppp {
+    border-bottom: 1px solid #777;
 }
